--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Banco de Dados
-spring.datasource.url=jdbc:mysql://localhost:3306/ProjetoBar
-spring.datasource.username=root
-spring.datasource.password=bancolocal
+spring.datasource.url=jdbc:mysql://${ip}:3306/${database}
+spring.datasource.username=${username}
+spring.datasource.password=${password}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #JPA
