--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 #Banco de Dados
-spring.datasource.url=jdbc:mysql://${ip}:3306/${database}
-spring.datasource.username=${username}
-spring.datasource.password=${password}
+spring.datasource.url=jdbc:mysql://${IP}:3306/${DATABASE}
+spring.datasource.username=${USERNAME_DB}
+spring.datasource.password=${PASSWORD_DB}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
+
+#Autenticacao da API
+spring.security.enabled=true
+spring.security.user.name=${AUTENTICACAO_USER}
+spring.security.user.password=${AUTENTICACAO_PASSWORD}
+spring.security.user.roles=${AUTENTICACAO_REGRA}
