adicionado classe de config de seguranca

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.properties.hibernate.show_sql=true
 
 #Autenticacao da API
 spring.security.enabled=true
-spring.security.user.name=${AUTENTICACAO_USER}
-spring.security.user.password=${AUTENTICACAO_PASSWORD}
-spring.security.user.roles=${AUTENTICACAO_REGRA}
+#spring.security.user.name=${AUTENTICACAO_USER}
+#spring.security.user.password=${AUTENTICACAO_PASSWORD}
+#spring.security.user.roles=${AUTENTICACAO_REGRA}
