ajustado requisicao liberando cors na configuracao de seguranca da API e adicionado Documemntacao no Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,10 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
 
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
 #Autenticacao da API
-spring.security.enabled=true
+#spring.security.enabled=true
 #spring.security.user.name=${AUTENTICACAO_USER}
 #spring.security.user.password=${AUTENTICACAO_PASSWORD}
 #spring.security.user.roles=${AUTENTICACAO_REGRA}
