melhoria do compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - projetobar
     volumes:
       - ./data:/var/lib/mysql
-      - ./sql-scripts:/docker-entrypoint-initdb.d/
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 networks:
   projetobar:
     driver: bridge
